# 202512

./: .env.example  .gitignore  Dockerfile  FREE_API_SETUP.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_auth_manual.py  validate_setup.py
.kiro/specs/instagram-content-analyzer/: design.md  requirements.md  tasks.md
examples/: content_retrieval_example.py  free_video_analysis_demo.py  simple_video_demo.py  text_processor_demo.py  video_processor_demo.py
src/: __init__.py  main.py
src/analysis/: __init__.py  audio_processor.py  multimodal.py  text_processor.py  video_processor.py
src/api/routes/: __init__.py  auth.py  content.py  query.py
src/auth/: manager.py
src/config/: settings.py
src/content/: __init__.py  retrieval.py
src/database/: content_db.py
src/models/: __init__.py  analysis.py  auth.py  content.py  query.py  response.py
src/query/: __init__.py  processor.py
src/response/: __init__.py  generator.py
tests/: conftest.py  test_audio_processor.py  test_content_retrieval.py  test_main.py  test_text_processor.py  test_video_processor.py
